--- a/css/main.css
+++ b/css/main.css
@@ -575,18 +575,25 @@ header,
   justify-content: center;
 }
 
+.logo {
+  height: auto;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .custom-footer-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  padding: 0 100px;
+  padding: 0 50px;
 }
 
-.footer-left .logo {
-  height: 150px;
-  max-width: 150px;
-  border-radius: 20%;
+.footer-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-main {
@@ -601,7 +608,7 @@ header,
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
@@ -648,7 +655,7 @@ header,
   background-color: #455a64;
 }
 
-@media (max-width: 1366px) {
+@media (max-width: 1900px) {
   html {
     overflow-y: auto;
     scrollbar-width: none;
@@ -694,7 +701,7 @@ header,
   }
   .text-aboutUs.shadow-aboutUs {
     width: 100%;
-    font-size: 18px;
+    font-size: 24px;
     margin-left: 0;
     padding: 20px;
   }
@@ -706,8 +713,11 @@ header,
     margin-top: 40px;
   }
   .logoAboutUs {
-    width: 20%;
-    height: 20%;
+    width: 15%;
+    height: 15%;
+  }
+  .text-bottom {
+    font-size: 20px;
   }
   .img-aboutUs {
     flex-direction: column;
@@ -715,7 +725,7 @@ header,
     padding-bottom: 20px;
   }
   .lotus-aboutUs {
-    width: 40%;
+    width: 20%;
     height: auto;
   }
   .chinese-labels {
@@ -729,6 +739,14 @@ header,
   .img-caption {
     font-size: 14px;
     text-align: right;
+  }
+  .footer-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logo {
+    width: 100%;
   }
   .inline-form input,
   .inline-form button {
