--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,19 +8,23 @@
   flex-direction: row;
   justify-content: center;
 }
-
+.logo {
+  // max-width: 200px;
+  height: auto;
+  width: 100%;
+  object-fit: contain;
+}
 .custom-footer-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  padding: 0 100px;
+  padding: 0 50px;
 }
-
-.footer-left .logo {
-  height: 150px;
-  max-width: 150px;
-  border-radius: 20%;
+.footer-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-main {
@@ -35,7 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
