--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1366px) {
+@media (max-width: 1900px) {
   html {
     overflow-y: auto;
     scrollbar-width: none;
@@ -49,7 +49,7 @@
 
   .text-aboutUs.shadow-aboutUs {
     width: 100%;
-    font-size: 18px;
+    font-size: 24px;
     margin-left: 0;
     padding: 20px;
   }
@@ -61,8 +61,11 @@
     margin-top: 40px;
   }
   .logoAboutUs {
-    width: 20%;
-    height: 20%;
+    width: 15%;
+    height: 15%;
+  }
+  .text-bottom {
+    font-size: 20px;
   }
 
   .img-aboutUs {
@@ -71,7 +74,7 @@
     padding-bottom: 20px;
   }
   .lotus-aboutUs {
-    width: 40%;
+    width: 20%;
     height: auto;
   }
 
@@ -87,6 +90,15 @@
   .img-caption {
     font-size: 14px;
     text-align: right;
+  }
+  .footer-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo {
+    width: 100%;
   }
   .inline-form input,
   .inline-form button {
