--- a/css/main.css
+++ b/css/main.css
@@ -684,7 +684,7 @@ header,
     font-size: 25px;
   }
   .bg-logo {
-    background: url("../images/grafika2.png") no-repeat;
+    background: url("../../images/logo-transparent.png") no-repeat;
     background-position: left 5vw top;
     background-size: 15% auto;
   }
