--- a/scss/pages/zodiac.scss
+++ b/scss/pages/zodiac.scss
@@ -199,9 +199,10 @@ th {
 
 .zodiac-name {
   font-size: 36px;
-  margin-top: 20px;
+  // margin-bottom: 2px;
   text-align: left;
 }
 .zodiac-description {
   font-size: 24px;
+  margin-bottom: 15px;
 }
